Better stronger f-...i dunno about that one

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
   <div id="main-container">
     <div id="top-container">
       <textarea class="input-field" id="mail-list" placeholder="Paste mail list here..."></textarea>
-      <button id="submit">Submit</button>
-      <!-- <input type="checkbox" value="1" name="sommarfest" /></>
-      <input type="checkbox" value="1" name="höstfest" />Sloth</>
-      <input type="checkbox" value="1" name="julfest" />Cheetah</> -->
+      <div id="control-container">
+        <button id="submit">Submit</button>
+        <input type="checkbox" checked="true" id="checkbox-remove-ext" value="1" name="remove-ext" />Remove Ext</>
+        <input type="checkbox" id="checkbox-keep-ext" value="1" name="keep-ext" />Keep Ext</>
+      </div>
     </div>
 
     <div id="bottom-container">
